--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -11,13 +11,7 @@
   margin-top: 30px;
 }
 
-.contact {
-  display: flex;
-  flex-direction: column;
-  padding-left: 750px;
-  margin-top: 20px;
-  z-index: 99;
-}
+.contact {}
 
 .contact p {
   font-size: 16pt;
@@ -25,6 +19,11 @@
 }
 
 .socials {
+  display: flex;
+  flex-direction: column;
+  padding-left: 750px;
+  margin-top: 20px;
+  z-index: 99;
   display: flex;
   flex-direction: row;
   gap: 15px;
@@ -62,6 +61,11 @@
   justify-content: center;
   /* gap: 0 50px; */
   /* margin: 0 110px; */
+}
+
+.bandcamp {
+  width: 350px;
+  height: 720px;
 }
 
 .youtube {
@@ -144,7 +148,7 @@
     width: 300px;
   }
 
-  .contact {
+  .socials {
     padding-left: 10px;
     margin-top: 50px;
   }
@@ -178,6 +182,7 @@
   }
 
   .footer {
+    padding-left: 85px;
     width: 300px;
   }
 
